--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "angular": "~1.2.18",
     "angular-route": "~1.2.18",
-    "angular-mocks": "~1.2.18"
+    "angular-mocks": "~1.2.18",
+    "ngFx": "~1.0.5",
+    "angular-ui-router": "~0.2.13"
   }
 }
